Prep for google sign in integration

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="ticket-punch" content="Project management web app created by Tara Timmerman" />
+  <meta name="google-signin-client_id" content="491838225868-cabcct3ld0pe8ll452h5oncks6j28dhu.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <title>Ticket Punch</title>
 </head>
 
